# sanjaya

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  run.py
src/llm/: annotations.py  annotators.py  validator.py
src/sanjaya/: cli.py
src/sanjaya/llm/: annotations.py  annotators.py  prompts.py
src/sanjaya/site/: chunker.py  generator.py
src/sanjaya/templates/: chunk-page.html.jinja  index.html.jinja
src/site/: generator.py  search.py
src/templates/: base.html.jinja  chunk-page.html.jinja  vocab-index.html.jinja  vocab-page.html.jinja
