[project]
name = "sanjaya"
version = "0.1.0"
description = "Generate richly annotated reading environments for historical texts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "perseus-cts @ git+https://github.com/PerseusDLCode/perseus-cts.git",
    "json-repair",
    "jsonschema",
    "requests",
    "nltk",
    "jinja2",
    "tqdm",
    "pyyaml",
]

[project.scripts]
sanjaya = "sanjaya.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sanjaya = ["templates/*.html.jinja"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
